--- a/src/component/formPersonal/index.css
+++ b/src/component/formPersonal/index.css
@@ -15,3 +15,27 @@
   border-radius: 5px;
   border: none;
 }
+
+
+@media screen and (max-width: 920px) {
+
+  .form form .form_input {
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .form form div label {
+    font-weight: bold;
+    color: rgb(25, 25, 90);
+  }
+
+  .form form div input {
+    font-size: 15px;
+    padding: 12px;
+    border-radius: 5px;
+    border: none;
+  }
+
+}
